...
      <!-- Page title -->
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
          android:id="@+id/id_task_create_description"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="#cccccc"
          android:text="@string/task_create_description"
          android:textAppearance="?android:attr/textAppearanceLarge" />

      </LinearLayout>

      <RelativeLayout
        android:layout_width="match_parent"
...
          <TextView
            android:id="@+id/id_tv_task_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_name" />
          <EditText
            android:id="@+id/id_et_task_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:cursorVisible="true"
            android:inputType="text"
            android:minWidth="100dp"
...
          android:id="@+id/id_btn_task_next_layout"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentEnd="true">

          <Button
            android:id="@+id/id_btn_steps"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="15dp"
            android:onClick="@{events::eventListStep}"
            android:text="@string/steps" />

...
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/task_picture" />

        <EditText
          android:id="@+id/id_et_task_picture"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="45dp"
          android:cursorVisible="false"
          android:focusable="false"
          android:inputType="text|textNoSuggestions"
          android:minWidth="100dp"
          android:singleLine="true"
          tools:text="name of the picture is here" />

        <!--"x" clear picture btn -->
        <ImageButton
          android:id="@+id/id_ib_clear_img_btn"
          android:layout_width="30dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="2dp"
          android:layout_gravity="end|center_vertical"
          android:background="@android:drawable/ic_menu_close_clear_cancel"
          android:contentDescription="@string/clear_picture"
...
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/task_sound" />

        <!--Sound name-->
        <EditText
          android:id="@+id/id_et_task_sound"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="50dp"
          android:cursorVisible="false"
          android:focusable="false"
          android:inputType="text|textNoSuggestions"
...
        <RelativeLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content">

          <!--"x" clear sound btn -->
          <ImageButton
            android:id="@+id/id_ib_clear_sound_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_gravity="end|center_vertical"
            android:background="@android:drawable/ic_menu_close_clear_cancel"
            android:contentDescription="@string/clear_sound"
            android:onClick="@{events::eventClearSound}"
            android:visibility="invisible" />

          <!--Play/Stop sound button-->
          <ImageButton
            android:id="@+id/id_btn_play_sound"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="40dp"
            android:adjustViewBounds="true"
            android:background="@color/transparent"
            android:elevation="1dp"
...
          android:id="@+id/id_tv_task_duration_time"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/duration_time" />

        <EditText
          android:id="@+id/id_et_task_duration_time"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="4dp"
          android:inputType="number"
          android:minWidth="100dp"
          tools:text="duration of smth is here" />
...
          android:layout_marginStart="60dp"
          android:orientation="horizontal">
<!--          android:onCheckedChanged="@{events::eventChangeButtonStepsVisibility}"-->


          <RadioButton
            android:id="@+id/id_rb_type_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/task" />
          <RadioButton
            android:id="@+id/id_rb_type_prize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:gravity="center_vertical"
            android:text="@string/prize" />
          <RadioButton
            android:id="@+id/id_rb_type_interaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/interaction" />

        </RadioGroup>
...
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">

        <Button
          android:id="@+id/id_btn_save_and_finish"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="15dp"
          android:onClick="@{events::eventSaveAndFinish}"
          android:text="@string/save_and_finish" />

...
