...
  <string name="name">Nazwa</string>
  <string name="done">Zapisz</string>
  <string name="plan_saved_message">Plan został zapisany</string>
  <string name="plan_removed_message">Plan został usunięty</string>
  <string name="tasks">Zadania</string>
  <string name="break_time_tasks">Break time tasks</string>
  <string name="task_saved_message">Element został zapisany</string>
  <string name="task_removed_message">Element został usunięty</string>
  <string name="task_removal_confirmation_negative_button">Nie</string>
  <string name="task_removal_confirmation_positive_button">Tak, usuń element</string>
  <string name="task_removal_confirmation_title">Potwierdzenie usunięcia elementu planu</string>
  <string name="task_removal_confirmation_message">Czy jesteś pewien, że chcesz usunąć ten elemnt?</string>
  <string name="plan_removal_confirmation_negative_button">Nie</string>
...
  <string name="storage_permission_granted">Permission granted. You can now select the file</string>
  <string name="storage_permission_denied">Permission denied. You can\'t add files from storage</string>
  <string name="activate_plan">Aktywuj plan</string>
  <string name="activate_plan_description">Wybierz plan, który chcesz aktywować dla dziecka:</string>

  <!--Validation messages-->
  <string name="only_letters_msg">Dozwolone wyłącznie litery i cyfry</string>
  <string name="name_exist_msg">Nazwa już istnieje</string>
  <string name="only_numbers_msg">Dozwolone wyłącznie liczby</string>
  <string name="not_empty_msg">Pole nie może być puste</string>
  <!-- Error messages -->
  <string name="picking_file_error">During making safe copy of file an error occurred. Ensure that on device drive is enough space.</string>
  <string name="playing_file_error">Can not play sound. Error occurred</string>
  <string name="no_file_to_play_error">No file to play. Please, select sound</string>
  <string name="create_step">Dodaj składową</string>
  <string name="steps_list_info">Krok 2.1: Stwórz składowe zadania i ustaw je w odpowiedniej kolejności</string>
...
