<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/id_layout_task_menu"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <Button
    android:id="@+id/id_navigation_basic_info"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:enabled="true"
    android:clickable="false"
    android:text="@string/basic_info" />

  <Button
    android:id="@+id/id_navigation_steps"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:enabled="false"
    android:clickable="false"
    android:text="@string/steps" />

</LinearLayout>