...
    android:layout_width="96dp"
    android:layout_height="96dp"
    app:srcCompat="@drawable/ic_playing_sound"/>

  <!--task image-->
  <ImageView
    android:id="@+id/id_iv_task_picture"
    android:layout_width="96dp"
    android:layout_height="96dp"
    app:srcCompat="@drawable/ic_placeholder"/>

  <!--task name-->
  <TextView
...
